@@ -7,7 +7,6 @@ import java.math.BigDecimal;
 import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
@@ -116,15 +115,17 @@ class SdkGroceryStoreServiceTest
                 .build();
 
         final Customer customer = Customer.builder().id(1337).build();
+        customer.setVersionIdentifier("123");
+
         final ActionResponseCollection<PurchaseHistoryItem> historyItems =
             service
                 .forEntity(customer)
                 .applyAction(
                     Customer
                         .filterPurchaseHistory(
-                            Collections.singleton(Receipt.builder().customerId(1337).id(4242).build()),
-                            Arrays.asList("milk", "eggs"),
-                            Arrays.asList(ProductCategory.DAIRY, ProductCategory.MEAT),
+                            List.of(Receipt.builder().customerId(1337).id(4242).build()),
+                            List.of("milk", "eggs"),
+                            List.of(ProductCategory.DAIRY, ProductCategory.MEAT),
                             dateRange))
                 .execute(destination);
 
